--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ propcache==0.3.2
 pydantic==2.11.9
 pydantic_core==2.33.2
 python-decouple==3.8
+pytz==2025.2
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
