--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ certifi==2025.8.3
 Faker==37.6.0
 frozenlist==1.7.0
 idna==3.10
+isort==6.0.1
 magic-filter==1.0.12
 multidict==6.6.4
 propcache==0.3.2
@@ -18,6 +19,7 @@ pydantic==2.11.9
 pydantic_core==2.33.2
 python-decouple==3.8
 pytz==2025.2
+redis==6.4.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
