--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ aiosignal==1.4.0
 annotated-types==0.7.0
 APScheduler==3.11.0
 asyncpg==0.30.0
+asyncpg-lite==0.3.1.3
 attrs==25.3.0
 certifi==2025.8.3
 Faker==37.6.0
 frozenlist==1.7.0
+greenlet==3.2.4
 idna==3.10
 isort==6.0.1
 magic-filter==1.0.12
@@ -20,6 +22,7 @@ pydantic_core==2.33.2
 python-decouple==3.8
 pytz==2025.2
 redis==6.4.0
+SQLAlchemy==2.0.43
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
