--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 TOKEN=720000:AAG2000Aa70p6eotkKiMKJD_nwosSAfvg
 ADMINS=00000000,000000001
-REDIS_URL=
+REDIS_URL=redis://localhost:6379/1
 DATABASE_STR=postgresql://USER:PASSWORD@HOST_IP:PORT/NAME_DB
 ROOT_PASS=
